feat: complete sprint 2 physical borrowing flow